# get-deps

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test-and-publish.yml  tox-and-publish.yml  tox.yml
src/get_deps/: __init__.py  get_deps.py
src/get_py_deps/: get_py_deps.py
tests/: get_deps_test.py
